# pocsmith

./: .gitignore  LICENSE  README.md  pyproject.toml
pocsmith/: __init__.py  builder.py  cli.py  profiles.yaml  registry.py
pocsmith/modules/: __init__.py  base.py  base64_helpers.py  bruteforce_loop.py  callback_value_handler.py  cookie_callback.py  csrf.py  file_upload.py  flask_server.py  form_auth.py  headers.py  html_parser.py  json_auth.py  json_registration.py  local_callback.py  multi_session.py  netcat_listener.py  proof_callback.py  queue_state.py  regex_extract.py  requests_session.py  token_extractor.py  websocket_async.py  websocket_client.py  zip_builder.py
