[project]
name = "pocsmith"
version = "0.1.0"
description = "Modular OSWE-style Python exploit template generator"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
pocsmith = "pocsmith.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
pocsmith = ["profiles.yaml"]
