[project]
name = "pocsmith"
version = "0.1.0"
description = "Modular Python proof-of-concept template generator for web security testing"
requires-python = ">=3.9"
dependencies = []
license = "MIT"
readme = "README.md"

[project.scripts]
pocsmith = "pocsmith.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
pocsmith = ["profiles.yaml"]
